...
				}
			}
		}
		.navigationDestination(for: Int.self, destination: { userId in
			DetailView(userId: userId)
		})
		.navigationTitle("People")
		.toolbar {
			ToolbarItem(placement: .primaryAction) {
				create
			}
		}
		.task {
...
		} label: {
			Symbols
				.plus
				.font(.system(.headline, design: .rounded).bold())
		}
		.disabled(viewModel.isLoading)
		.accessibilityIdentifier("createButton")
	}
}

